<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <android.support.v7.widget.Toolbar
            android:background="@color/primary"
            app:title="Govt.Post Graduate College"
            app:titleTextColor="@color/white"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:background="@color/student"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:textSize="30sp"
            android:textColor="#000"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textSize="30sp"
            android:textColor="#000"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textSize="30sp"
            android:textColor="#000"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:textSize="30sp"
            android:textColor="#000"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e"
            android:textSize="30sp"
            android:textColor="#000"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f"
            android:textSize="30sp"
            android:textColor="#000"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g"
            android:textSize="30sp"
            android:textColor="#000"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h"
            android:textSize="30sp"
            android:textColor="#000"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i"
            android:textSize="30sp"
            android:textColor="#000"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/j"
            android:textSize="30sp"
            android:textColor="#000"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/k"
            android:textSize="30sp"
            android:textColor="#000"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"/>



    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>